# sklearn-hello-world

./: .gitignore  Multiclass classification using scikit-learn.ipynb  filename.joblib  pyproject.toml  requirements.txt
.ipynb_checkpoints/: An introduction to machine learning with scikit-learn-checkpoint.ipynb
